# ARPianoVisualizer

./: Cargo.toml  README.md
.cargo/: config.toml
src/: background.rs  backgroundShader.wgsl  main.rs  midi.rs  midi2.rs  testing.rs  video.rs
src/video/: aruco_camera.rs
