[package]
name = "ARPianoVisualizer"
version = "0.1.0"
edition = "2024"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.16.1"
bytemuck = "1.23.0"
midir = "0.10.1"
# opencv = "0.94.4"
opencv = { version = "0.94.4", features = ["clang-runtime"] }
serde = "1.0.219"
serde_json = "1.0.140"
